force-app/zurich-base/main/default/objects/AsignacionPlan__c/AsignacionPlan__c.object-meta.xml
<CustomObject>
    <description>SDM: Representa la asignación del plan comercial.</description>
    <label>Asignación Plan</label>
    <nameField>
        <label>Asignación Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asignaciones Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>