force-app/zurich-base/main/default/objects/AsignacionPlan__c/fields/Agrupacion_mediador__c.field-meta.xml
<CustomField>
    <fullName>Agrupacion_mediador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agrupación mediador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asignaciones Plan</relationshipLabel>
    <relationshipName>Asignaciones_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>