force-app/zurich-base/main/default/objects/AsignacionPlan__c/fields/Asignado__c.field-meta.xml
<CustomField>
    <fullName>Asignado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asignado a</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Asignaciones_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>