force-app/zurich-base/main/default/objects/AsignacionPlan__c/fields/Mediador__c.field-meta.xml
<CustomField>
    <fullName>Mediador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mediador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asignaciones Plan (Mediador)</relationshipLabel>
    <relationshipName>Asignaciones_Mediador</relationshipName>
    <type>Lookup</type>
</CustomField>