force-app/zurich-base/main/default/objects/AsignacionPlan__c/fields/Plan_Comercial_del__c.field-meta.xml
<CustomField>
    <fullName>Plan_Comercial__c</fullName>
    <label>Plan Comercial</label>
    <referenceTo>PlanComercial__c</referenceTo>
    <relationshipLabel>Asignaciones Plan</relationshipLabel>
    <relationshipName>Asignaciones_Plan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>