force-app/zurich-base/main/default/objects/AsignacionPlan__c/recordTypes/AsignacionAgrupado.recordType-meta.xml
<RecordType>
    <fullName>AsignacionAgrupado</fullName>
    <active>true</active>
    <label>Asignación Agrupado</label>
</RecordType>