force-app/zurich-base/main/default/objects/AsignacionPlan__c/recordTypes/AsignacionMediador.recordType-meta.xml
<RecordType>
    <fullName>AsignacionMediador</fullName>
    <active>true</active>
    <label>Asignación Mediador</label>
</RecordType>