force-app/zurich-base/main/default/objects/AsignacionPlan__c/recordTypes/AsignacionRN.recordType-meta.xml
<RecordType>
    <fullName>AsignacionRN</fullName>
    <active>true</active>
    <label>Asignación RN</label>
</RecordType>